Add buttons for animating to next and previous image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Photo Album</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://unpkg.com/normalize.css">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -18,7 +19,8 @@
                 <div class="item" style="--position: 7"><img src="images/INSTAX UP! (2).png"></div>
                 <div class="item" style="--position: 8"><img src="images/INSTAX UP! (1).png"></div>
             </div>
-            <button id="toggleAnimation">Start/Stop Animation</button>
+            <button id="toggleNext">Next Animation</button>
+            <button id="togglePrevious">Previous Animation</button>
         </div>
         <script src="index.js"></script>
     </body>
