Implement left and right animations

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="item" style="--position: 7"><img src="images/INSTAX UP! (2).png"></div>
                 <div class="item" style="--position: 8"><img src="images/INSTAX UP! (1).png"></div>
             </div>
-            <button id="toggleNext">Next Animation</button>
-            <button id="togglePrevious">Previous Animation</button>
+            <button id="toggleLeft">Next Animation</button>
+            <button id="toggleRight">Previous Animation</button>
         </div>
         <script src="index.js"></script>
     </body>
