--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://unpkg.com/normalize.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -19,8 +20,8 @@
                 <div class="item" style="--position: 7"><img src="images/INSTAX UP! (2).png"></div>
                 <div class="item" style="--position: 8"><img src="images/INSTAX UP! (1).png"></div>
             </div>
-            <button id="toggleLeft">Next Animation</button>
-            <button id="toggleRight">Previous Animation</button>
+            <button type="button" class="btn btn-light" id="toggleLeft"><img src="./images/arrow-left.svg" /></button>
+            <button type="button" class="btn btn-light" id="toggleRight"><img src="./images/arrow-right.svg" /></button>
         </div>
         <script src="index.js"></script>
     </body>
