Add text to each image and render it visible only when it is facing the user

--- a/index.html
+++ b/index.html
@@ -11,17 +11,48 @@
     <body>
         <div class="banner">
             <div class="slider" style="--quantity: 8">
-                <div class="item" style="--position: 1"><img src="images/INSTAX UP! (8).png"></div>
-                <div class="item" style="--position: 2"><img src="images/INSTAX UP! (7).png"></div>
-                <div class="item" style="--position: 3"><img src="images/INSTAX UP! (6).png"></div>
-                <div class="item" style="--position: 4"><img src="images/INSTAX UP! (5).png"></div>
-                <div class="item" style="--position: 5"><img src="images/INSTAX UP! (4).png"></div>
-                <div class="item" style="--position: 6"><img src="images/INSTAX UP! (3).png"></div>
-                <div class="item" style="--position: 7"><img src="images/INSTAX UP! (2).png"></div>
-                <div class="item" style="--position: 8"><img src="images/INSTAX UP! (1).png"></div>
+                <div class="item" style="--position: 1">
+                    <img src="images/INSTAX UP! (8).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 2">
+                    <img src="images/INSTAX UP! (7).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 3">
+                    <img src="images/INSTAX UP! (6).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 4">
+                    <img src="images/INSTAX UP! (5).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 5">
+                    <img src="images/INSTAX UP! (4).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 6">
+                    <img src="images/INSTAX UP! (3).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 7">
+                    <img src="images/INSTAX UP! (2).png">
+                    <p>This is a test paragraph</p>
+                </div>
+                <div class="item" style="--position: 8">
+                    <img src="images/INSTAX UP! (1).png">
+                    <p>This is a test paragraph</p>
+                </div>
             </div>
             <button type="button" class="btn btn-light" id="toggleLeft"><img src="./images/arrow-left.svg" /></button>
             <button type="button" class="btn btn-light" id="toggleRight"><img src="./images/arrow-right.svg" /></button>
+            <div class="content">
+                <div class="author">
+                    <h2>Razvan's Instax Album</h2>
+                    <p><b>Learn about my photo gear</b></p>
+                    <p><b>Learn about me</b></p>
+                </div>
+            </div>
         </div>
         <script src="index.js"></script>
     </body>
