Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -12,36 +12,36 @@
         <div class="banner">
             <div class="slider" style="--quantity: 8">
                 <div class="item" style="--position: 1">
-                    <img src="images/INSTAX UP! (8).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (8).png">
+                    <p>Interesting word display left on the shelves of the supermarket. Maybe just as a joke, or maybe as a statement. We may never know.</p>
                 </div>
                 <div class="item" style="--position: 2">
-                    <img src="images/INSTAX UP! (7).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (7).png">
+                    <p>Funny garage door featuring all the dashboard warning signs you wish to avoid.</p>
                 </div>
                 <div class="item" style="--position: 3">
-                    <img src="images/INSTAX UP! (6).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (6).png">
+                    <p>Night time shot through the window of a local butchershop which has colorful neon lights.</p>
                 </div>
                 <div class="item" style="--position: 4">
-                    <img src="images/INSTAX UP! (5).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (5).png">
+                    <p>A shot of my friend through the broken glass of our closest tram station. The panel is fixed now, so the shot can never be replicated.</p>
                 </div>
                 <div class="item" style="--position: 5">
-                    <img src="images/INSTAX UP! (4).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (4).png">
+                    <p>My friend's very photogenic cat named 'Handy'. </p>
                 </div>
                 <div class="item" style="--position: 6">
-                    <img src="images/INSTAX UP! (3).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (3).png">
+                    <p>Severly underexposed picture of my bedroom during a summer evening.</p>
                 </div>
                 <div class="item" style="--position: 7">
-                    <img src="images/INSTAX UP! (2).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (2).png">
+                    <p>Unique display of art created by the bakers working for Auchan's Oradea store.</p>
                 </div>
                 <div class="item" style="--position: 8">
-                    <img src="images/INSTAX UP! (1).png">
-                    <p>This is a test paragraph</p>
+                    <img src="images/instax-album/INSTAX UP! (1).png">
+                    <p>Immensely soothing green tones captured inside a neurologist's office.</p>
                 </div>
             </div>
             <button type="button" class="btn btn-light" id="toggleLeft"><img src="./images/arrow-left.svg" /></button>
@@ -49,7 +49,7 @@
             <div class="content">
                 <div class="author">
                     <h2>Razvan's Instax Album</h2>
-                    <p><b>Learn about my photo gear</b></p>
+                    <a href="gear.html"><b>Learn about my photo gear</b></a>
                     <p><b>Learn about me</b></p>
                 </div>
             </div>
