Add digicam album page

--- a/gear.html
+++ b/gear.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Photo Album</title>
+        <title>Photo Gear</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://unpkg.com/normalize.css">
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <div class="carousel-container">
+        <div class="slider-container">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
