--- a/digicam.html
+++ b/digicam.html
@@ -11,7 +11,7 @@
   </head>
   <body class="digicam-body">
     <h1>Digicam Gallery</h1>
-    <div class="container">
+    <div class="gallery-container">
 
             <div class="gallery-item w-2 h-2">
                 <div class="image">
