--- a/gear.html
+++ b/gear.html
@@ -11,7 +11,28 @@
     <body>
         <div class="container gear-container">
             <div class="gear-image">
-                <img id="gear-photo" src="./images/gear/instax1.jpg" alt="" />
+                <div id="carouselInstax" data-bs-theme="dark" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="./images/gear/instax2.png" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gear/instax3.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gear/instax1.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselInstax" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselInstax" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                <!-- <img id="gear-photo" src="./images/gear/instax1.jpg" alt="" /> -->
             </div>
 
             <div class="gear-info">
@@ -27,7 +48,28 @@
 
         <div class="container gear-container">
             <div class="gear-image">
-                <img id="gear-photo" src="./images/gear/Digimax2.webp" alt="" />
+                <div id="carouselSamsung" data-bs-theme="dark" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="./images/gear/Digimax2.webp" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gear/Digimax3.webp" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="./images/gear/Digimax5.webp" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselSamsung" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselSamsung" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                <!-- <img id="gear-photo" src="./images/gear/Digimax2.webp" alt="" /> -->
             </div>
 
             <div class="gear-info">
@@ -42,7 +84,7 @@
             </div>
         </div>
 
-        <div class="slider-container">
+        <!-- <div class="slider-container">
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -69,7 +111,7 @@
         </div>
         
         
-        <button id="change-gear-button"></button>
+        <button id="change-gear-button"></button> -->
         <script src="script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
