--- a/gear.html
+++ b/gear.html
@@ -9,6 +9,36 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Albums
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="./index.html">Instax</a></li>
+                          <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
+                          <li><a class="dropdown-item" href="#">Camcorder</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./gear.html">Gear</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
         <div class="container gear-container">
             <div class="gear-image">
                 <div id="carouselInstax" data-bs-theme="dark" class="carousel slide">
@@ -69,7 +99,6 @@
                       <span class="visually-hidden">Next</span>
                     </button>
                   </div>
-                <!-- <img id="gear-photo" src="./images/gear/Digimax2.webp" alt="" /> -->
             </div>
 
             <div class="gear-info">
@@ -84,35 +113,7 @@
             </div>
         </div>
 
-        <!-- <div class="slider-container">
-            <div id="carouselExampleIndicators" class="carousel slide">
-                <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                <div class="carousel-item active c-item">
-                    <img src="./images/digimax-album/STA60011.JPG" class="d-block w-100 c-img" alt="...">
-                </div>
-                <div class="carousel-item c-item">
-                    <img src="./images/digimax-album/STA60019.JPG" class="d-block w-100 c-img" alt="...">
-                </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </div>
-        
-        
-        <button id="change-gear-button"></button> -->
-        <script src="script.js"></script>
+        <script src="index.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 
