--- a/index.html
+++ b/index.html
@@ -9,6 +9,36 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Albums
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="./index.html">Instax</a></li>
+                          <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
+                          <li><a class="dropdown-item" href="#">Camcorder</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./gear.html">Gear</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
         <div class="banner">
             <div class="slider" style="--quantity: 8">
                 <div class="item" style="--position: 1">
@@ -55,5 +85,6 @@
             </div>
         </div>
         <script src="index.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
