--- a/digicam.html
+++ b/digicam.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
     
   </head>
-  <body>
+  <body class="digicam-gallery">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
