Update styling and alt values

--- a/gear.html
+++ b/gear.html
@@ -6,51 +6,51 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://unpkg.com/normalize.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Albums
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="./index.html">Instax</a></li>
-                          <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
-                          <li><a class="dropdown-item" href="#">Camcorder</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./gear.html">Gear</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                </ul>
-              </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Albums
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./index.html">Instax</a></li>
+                        <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
+                      </ul>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./gear.html">Gear</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">About</a>
+                  </li>
+              </ul>
             </div>
-          </nav>
+          </div>
+      </nav>
 
         <div class="container gear-container">
             <div class="gear-image">
                 <div id="carouselInstax" data-bs-theme="dark" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="./images/gear/instax2.png" class="d-block w-100" alt="...">
+                        <img src="./images/gear/instax2.png" class="d-block w-100" alt="fujifilm Instax Mini Evo camera">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/gear/instax3.jpg" class="d-block w-100" alt="...">
+                        <img src="./images/gear/instax3.jpg" class="d-block w-100" alt="fujifilm Instax Mini Evo camera">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/gear/instax1.jpg" class="d-block w-100" alt="...">
+                        <img src="./images/gear/instax1.jpg" class="d-block w-100" alt="fujifilm Instax Mini Evo camera">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselInstax" data-bs-slide="prev">
@@ -62,16 +62,16 @@
                       <span class="visually-hidden">Next</span>
                     </button>
                   </div>
-                <!-- <img id="gear-photo" src="./images/gear/instax1.jpg" alt="" /> -->
             </div>
 
             <div class="gear-info">
                 <h2 id="gear-title">The wonderful Instax Mini Evo</h2>
                 <p id="gear-description">
-                    The instax Mini Evo is a quirky little camera,
-                    featuring a hybrid system which bridges the gap between analog and digital photography.
+                    The instax Mini Evo is for sure a quirky thing, being both a camera and an instant printer.
+                    Featuring a hybrid system that bridges the gap between analog and digital photography, this camera lets you 
+                    take pictures, then mix and match, edit them, and only print your favorite ones. 
+                    There is also an app that let's you send images directly to the camera to print.
                     Featuring a cold shoe and a tripod mount, this litte camera can be equipped for any kind of challenge.
-                    There is also an app which let's you send images directly to the image to print.
                 </p>
             </div>
         </div>
@@ -81,13 +81,13 @@
                 <div id="carouselSamsung" data-bs-theme="dark" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="./images/gear/Digimax2.webp" class="d-block w-100" alt="...">
+                        <img src="./images/gear/Digimax2.webp" class="d-block w-100" alt="samsung digimax a6 camera">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/gear/Digimax3.webp" class="d-block w-100" alt="...">
+                        <img src="./images/gear/Digimax3.webp" class="d-block w-100" alt="samsung digimax a6 camera">
                       </div>
                       <div class="carousel-item">
-                        <img src="./images/gear/Digimax5.webp" class="d-block w-100" alt="...">
+                        <img src="./images/gear/Digimax5.webp" class="d-block w-100" alt="samsung digimax a6 camera">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselSamsung" data-bs-slide="prev">
@@ -98,17 +98,16 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+                </div>
             </div>
 
             <div class="gear-info">
                 <h2 id="gear-title">Retro Revolution: The Samsung Digimax</h2>
                 <p id="gear-description">
-                    The Samsung Digimax line was a series of wonderful digital cameras, using the now defunct
-                    and sought-after CCD sensors of yesteryear. Before we had our modern phone cameras with incredible color accuracy, there were the digicams.
-                    Using CCD sensors for capturing images, although still digital, images give off a more 'analog' feel. Soft blurs and yellow-greenish hues characterise the images these cameras produce.
-                    Right now having a resurgence, the old digicams of yesteryear became sought after again, as more and more people appreciate the characterful imperfections they provide, in a world of perfectly crafted and edited social media posts.
-                    Paired with the nostalgia factor, the old digicams make every shoot seem like a dreamish sequence because of their imperfections.
+                    The Samsung Digimax line is a series of wonderful digital cameras from yesteryear. Before we had our modern phone cameras with their incredible color accuracy, there were the digicams.
+                    Using CCD sensors for capturing images, although still digital, captured images give off more of an 'analog' feel. Soft blurs and yellow-greenish hues characterise the images these cameras produce.
+                    Lately the old digicams of yesteryear became sought after again, as more and more people appreciate the characterful imperfections they provide in a world of perfectly crafted social media posts. 
+                    
                 </p>
             </div>
         </div>
