--- a/digicam.html
+++ b/digicam.html
@@ -14,35 +14,39 @@
     
   </head>
   <body class="digicam-gallery">
-
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Albums
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="./index.html">Instax</a></li>
-                      <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./gear.html">Gear</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+            <!-- Navbar toggler -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <h1>Digicam Gallery</h1>
+            <!-- Navbar content -->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Albums
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./index.html">Instax</a></li>
+                            <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./gear.html">Gear</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- Centered h1 element -->
+            <h1 class="navbar-title mx-auto">Digicam Gallery</h1>
+        </div>
+    </nav>
     <div class="gallery-container">
         
             <div class="gallery-item w-2 h-2">
