--- a/digicam.html
+++ b/digicam.html
@@ -26,20 +26,21 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Albums
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./index.html">Instax</a></li>
-                            <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./gear.html">Gear</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./gear.html">Gear</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Albums
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="./index.html">Instax</a></li>
+                                <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
+                            </ul>
+                        </li>
                 </ul>
             </div>
 
