--- a/gear.html
+++ b/gear.html
@@ -12,39 +12,44 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-          <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+        <div class="container-fluid">
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
+
+            
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./gear.html">Gear</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Albums
-                      </a>
-                      <ul class="dropdown-menu">
+                    </a>
+                    <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="./index.html">Instax</a></li>
                         <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
-                      </ul>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="./gear.html">Gear</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
-                  </li>
-              </ul>
+                    </ul>
+                </li>
+                </ul>
             </div>
-          </div>
-      </nav>
+
+            <!-- <h1 class="navbar-title mx-auto">My photo gear</h1> -->
+        </div>
+    </nav>
 
         <div class="container gear-container">
             <div class="gear-image">
                 <div id="carouselInstax" data-bs-theme="dark" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="./images/gear/instax2.png" class="d-block w-100" alt="fujifilm Instax Mini Evo camera">
+                        <img src="./images/gear/instax2(1).png" class="d-block w-100" alt="fujifilm Instax Mini Evo camera">
                       </div>
                       <div class="carousel-item">
                         <img src="./images/gear/instax3.jpg" class="d-block w-100" alt="fujifilm Instax Mini Evo camera">
