Add about page with incomplete styling, and update navbar

--- a/gear.html
+++ b/gear.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./gear.html">Gear</a>
@@ -74,9 +74,10 @@
                 <p id="gear-description">
                     The instax Mini Evo is for sure a quirky thing, being both a camera and an instant printer.
                     Featuring a hybrid system that bridges the gap between analog and digital photography, this camera lets you 
-                    take pictures, then mix and match, edit them, and only print your favorite ones. 
+                    take pictures, edit them, and only print the ones you choose. 
                     There is also an app that let's you send images directly to the camera to print.
-                    Featuring a cold shoe and a tripod mount, this litte camera can be equipped for any kind of challenge.
+                    Every photo in the Instax gallery was printed and then digitally scanned from a physical copy using a printer.
+
                 </p>
             </div>
         </div>
@@ -109,10 +110,9 @@
             <div class="gear-info">
                 <h2 id="gear-title">Retro Revolution: The Samsung Digimax</h2>
                 <p id="gear-description">
-                    The Samsung Digimax line is a series of wonderful digital cameras from yesteryear. Before we had our modern phone cameras with their incredible color accuracy, there were the digicams.
+                    The Samsung Digimax A6 camera is from a line of wonderful digital cameras from the early 2000s. Before we had our modern phone cameras with their incredible color accuracy, there were the digicams.
                     Using CCD sensors for capturing images, although still digital, captured images give off more of an 'analog' feel. Soft blurs and yellow-greenish hues characterise the images these cameras produce.
-                    Lately the old digicams of yesteryear became sought after again, as more and more people appreciate the characterful imperfections they provide in a world of perfectly crafted social media posts. 
-                    
+                    I enjoy shooting this camera for its characteristics. In a world full of perfectly crafted social media photos, shooting with this camera provides a breath of fresh air. 
                 </p>
             </div>
         </div>
