--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-link" href="./gear.html">Gear</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="./about.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Albums
                             </a>
                             <ul class="dropdown-menu">
