Add touchscreen functionality

--- a/gear.html
+++ b/gear.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
 
-            <!-- <h1 class="navbar-title mx-auto">My photo gear</h1> -->
+            <h1 class="navbar-title mx-auto">My photo gear</h1>
         </div>
     </nav>
 
