--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="item" style="--position: 5">
                     <img src="images/instax-album/INSTAX UP! (5).png" alt="man through broken glass">
-                    <p>A shot of my friend through the broken glass of our closest tram station.</p>
+                    <p>A shot of my friend through the broken glass of our local tram station.</p>
                 </div>
                 <div class="item" style="--position: 6">
                     <img src="images/instax-album/INSTAX UP! (6).png" alt="animal shaped neon signs">
