--- a/about.html
+++ b/about.html
@@ -9,14 +9,60 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-
+        <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class="background-header">
-            <p>Hello, I'm</p>
-            <h1>Razvan</h1>
-        </header>
-        <p>Information text</p>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./gear.html">Gear</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Albums
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="./index.html">Instax</a></li>
+                            <li><a class="dropdown-item" href="./digicam.html">Digicam</a></li>
+                        </ul>
+                    </li>
+                    </ul>
+                </div>
+                <h1 class="navbar-title mx-auto">About</h1>
+            </div>
+        </nav>
+        <div class="header-container">
+            <img class="header-image" src="images/digimax-album/STA50011(2).jpg" alt="Beach Cafe">
+            <p class="header-greet">Hello, I'm</p>
+            <h1 class="header-title">Razvan!</h1>
+        </div> 
+            
+        <div class="content">
+            <p class="content">
+                Hello. My name is Razvan and I'll be short. We all have hobbies, I personally have a few. One of the things I enjoy
+                the most is using interesting and/or quirky cameras, photo or video, old or new. I get bored by the "perfect"-ly bland photos
+                I see every day on social media. I sometimes go out with one of my cameras, and if I see something mildy interesting I'll just
+                take a picture.
+
+                I created this website to have a place where I can upload my collection of photos and share with my friends. Every photo
+                on this website is taken by me. Every photo in the Instax gallery is physically printed and then scanned.
+
+                My main goal for this website was for it to be simple (just CSS and JS), and to be able to add photos in the future HTML without
+                needing to adjust the code or styling. It's a work in progress, as I'll be adding a dedicated video page for video content
+                and maybe 
+
+                Feel free to acces my github, copy the code, edit it, add your own photos etc.
+
+            </p>
+        </div>
+        
     </body>
 </html>
