Fixes for js and styling

--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
                 <h1 class="header-title">Razvan!</h1>
             </div> 
         
-            <section class="text">
+            <section class="text about-page">
                 <p class="content">
-                    Hello. My name is Razvan and I'll be short. We all have hobbies, personally I have a few. One of the things I enjoy
+                    Hello! My name is Razvan and I'll be short. We all have hobbies, personally I have a few. One of the things I enjoy
                     the most is using interesting and/or quirky cameras, photo or video, old or new. I get bored by the "perfect"-ly bland photos
                     I see every day on social media. I sometimes go out with one of my cameras, and if I see something mildy interesting I'll just
                     take a picture.
@@ -67,7 +67,7 @@
         </main>
         
         <footer>
-            <p class="copyright">&copy; Copyright <span id="year"></span>. No rights reserved. Built by Razvan</p>
+            <p class="copyright">&copy; Copyright <span id="year"></span>. No rights reserved.</p>
             <ul class="social">
                 <li>
                     <a href="https://www.github.com/baidocrazvan">
