--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </main>
 
         <footer>
-            <p class="copyright">&copy; Copyright <span id="year"></span>. No rights reserved. Built by Razvan</p>
+            <p class="copyright">&copy; Copyright <span id="year"></span>. No rights reserved.</p>
             <ul class="social">
                 <li>
                     <a href="https://www.github.com/baidocrazvan">
