--- a/digicam.html
+++ b/digicam.html
@@ -27,10 +27,10 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <li class="nav-item">
-                            <a class="nav-link" href="./about.html">About</a>
+                            <a class="nav-link me-3" href="./about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./gear.html">Gear</a>
+                            <a class="nav-link me-3" href="./gear.html">Gear</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
