--- a/pages/gear.html
+++ b/pages/gear.html
@@ -9,7 +9,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../assets/css/styles.css">
-    </head>
+        <link rel="icon" type="image/x-icon" href="../favicon.ico">
+      </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
           <div class="container-fluid">
