--- a/pages/about.html
+++ b/pages/about.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="../favicon.ico">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
