--- a/pages/digicam.html
+++ b/pages/digicam.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/styles.css">
-    
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
   </head>
   <body class="digicam-gallery">
     
